--- a/public/styles.css
+++ b/public/styles.css
@@ -36,6 +36,7 @@ h2 {
 
 .hero-section-texts {
   flex-grow: 2;
+  color: #fff;
 }
 
 .hero-section-image {
@@ -92,40 +93,31 @@ section .button {
   top: 0;
   right: 0;
 }
-
-.card {
-  flex: 1;
-  width: 15rem;
-  height: 25rem;
-  border-radius: 1rem;
-  padding: 10px;
-  background-color: #EDEFEE;
-  flex-direction: column;
-  justify-content: space-between; /* Agregar esta línea para espacio entre elementos */
-}
-
-
-
-.card p {
-  margin: 0;
-  font-size: 16px;
-  inline-size: 1.5;
-}
-
 .card:hover {
   box-shadow: 5px 0px 25px black;
 }
-
-
 .delivery {
   height: 1rem;
 }
 
-.card img {
-  max-height: fit-content;
-  max-width: fit-content;
-  border-top-left-radius: 18px;
-  border-top-right-radius: 18px;
+.card-info {
+  padding: 5px;
+}
+.card-price {
+  font-weight: bold;
+}
+.card-name {
+  font-weight: bold;
+  padding-bottom: 5px;
+}
+.card-price {
+  color: #EE9972;
+  font-size: small;
+}
+.card-details {
+  color: #495E57;
+  font-size: small;
+  padding-bottom: 10px;
 }
 
 .button {
@@ -135,14 +127,30 @@ section .button {
   border-radius: 16px;
 }
 
-footer {
+form > input, select {
+  border-radius: 8px;
+  height: 2rem;
+}
+
+.res-title {
   display: flex;
+  align-self: center;
+}
+
+footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
   border-top: 2px solid black;
 }
 
 footer img {
   max-height:50px;
   padding: 5px;
+}
+footer p {
+  font-size: small;
+  padding-top: 15px;
 }
 
 /* Footer animation */
@@ -167,26 +175,79 @@ footer div {
   flex: 1;
 }
 
-
-
-@media (max-width: 767px) {
-  section {
-    grid-template-columns: 1fr; /* Cambia a una sola columna */
-    grid-template-rows: auto; /* Restaura la altura automática de las filas */
+@media (max-width: 390px) {
+  .max-width-container {
+    padding: 1em;
+    max-width: 100%;
   }
 
+  .main {
+    width: 100vw; /* Establece el ancho al 100% del viewport */
+    position: relative; /* Establece la posición como relativa */
+    right: -25px; /* Alinea el div a la derecha */
+  }
+
+  footer {
+    width: 100vw; /* Establece el ancho al 100% del viewport */
+    position: relative; /* Establece la posición como relativa */
+    right: -25px; /* Alinea el div a la derecha */
+  }
+  .section-background {
+    position: absolute;
+    top: 0;
+    left: 80%;
+    transform: translateX(-50%);
+    margin: 0 auto;
+    width: 100vw;
+    height: 100%;
+    z-index: -1;
+    background-color: #495E57;
+  }
+  
   .card {
-    grid-row: auto; /* Restaura la ubicación automática en filas */
-    margin-bottom: 10px; /* Agrega un margen inferior para separar las cards */
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: auto;
+    width: 100vw;
+    border-top: 1px solid #495E57;
+  }
+
+  .card-name,
+  .card-details,
+  .card-price {
+    margin: 0;
+    font-size: 16px;
+  }
+  .card-img {
+    grid-row: 1 / span 3;
+    grid-column: 2;
+    align-self: center;
+  }
+  
+  .button-container {
+    display: none;
   }
 
   .card img {
-    width: 100%; /* Establece el ancho de la imagen al 100% del contenedor */
-    height: auto; /* Ajusta la altura automáticamente */
+    width: 80%;
+    border-radius: 0%;
+  }
+
+  .card-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .card-info {
+    order: 1; /* Cambia el orden a 1 (primero) */
+  }
+  .card-price {
+    order: 3; /* Cambia el orden a 3 (último) */
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 391px) {
   .section-background {
     position: absolute;
     top: 0;
@@ -221,15 +282,49 @@ footer div {
   }
 
   .card {
-    width: 15rem;
-    height: 25rem;
-    border-radius: 1rem;
-    padding: 10px;
+    height: 350px;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto;
+    gap: 10px;
     background-color: #EDEFEE;
-    flex-direction: column;
-    justify-content: space-between;
+    border-top-left-radius: 18px;
+    border-top-right-radius: 18px;
   }
 
+  .card-img {
+    grid-row: 1 / span 2;
+  }
+
+  .card-info {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows:auto auto auto;
+    gap: 10px;
+  }
+
+  .card-name {
+    grid-column: 1 / span 3;
+    
+  }
+
+  .card-price {
+    grid-column: 5 ;
+    align-self: right;
+  }
+
+  .card-details {
+    grid-column: 1 / span 5;
+    grid-row: 2;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-height: 4.8em; /* Ajusta la altura según sea necesario */
+}
+
+  .card-details:hover {
+    white-space: normal;
+    overflow: auto;
+  }
   .card:first-child {
     margin-right: auto; /* Empuja la primera card hacia la izquierda */
   }
@@ -239,29 +334,12 @@ footer div {
   }
 
   .card img {
-    max-height: fit-content;
-    max-width: fit-content;
+    max-height: 9rem;
+    width: 100%;
     border-top-left-radius: 18px;
     border-top-right-radius: 18px;
+    object-fit: cover;
   }
-
-  .button-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .button-container .delivery {
-    max-height: 1rem;
-    margin-right: 5px;
-  }
-
-  .card p {
-    margin: 0;
-    font-size: 16px;
-    inline-size: 1.5;
-  }
-
   .card:hover {
     box-shadow: 5px 0px 25px black;
   }
@@ -269,10 +347,20 @@ footer div {
   .delivery {
     height: 1rem;
   }
-
-  .card img {
-    width: 100%;
-    align-self: center;
-    padding: 5px;
+  .button-container {
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items:center;
+    justify-content: space-between;
+    padding-top: 80px;
+    padding-left: 5px;
+    
   }
+  .button-container > a {
+    grid-column: 1 / span 2;
+  }
+  .delivery {
+    grid-column: 3;
+  }
+  
 }
